# socksio

./: .flake8  .isort.cfg  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  README.md  danted.conf  docker-compose.yml
docs/source/: api_socks4.rst  api_socks5.rst  conf.py  development.rst  index.rst  usage.rst
examples/: example_socks4.py  example_socks4a.py  example_socks5.py
socks/: __init__.py  socks4.py  socks5.py  utils.py
socksio/: __init__.py  _types.py  compat.py  singledispatchmethod.py  socks4.py  socks5.py  utils.py
tests/: run_acceptance_tests.sh  test_compat.py  test_socks4.py  test_socks5.py  test_utils.py
